tests/rosetta/out/Pascal/append-a-record-to-the-end-of-a-text-file.pas
// Generated by Mochi compiler v0.10.30 on 1970-01-01T00:00:00Z
program AppendARecordToTheEndOfATextFile;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, Classes, Variants;

type
  generic TArray<T> = array of T;
generic function _appendList<T>(arr: specialize TArray<T>; val: T): specialize TArray<T>;
var i,n: Integer;
begin
  n := Length(arr);
  SetLength(Result, n + 1);
  for i := 0 to n - 1 do
    Result[i] := arr[i];
  Result[n] := val;
end;


function writeTwo(): specialize TArray<string>;
begin
  result := specialize TArray<string>(['jsmith:x:1001:1000:Joe Smith,Room 1007,(234)555-8917,(234)555-0077,jsmith@rosettacode.org:/home/jsmith:/bin/bash', 'jdoe:x:1002:1000:Jane Doe,Room 1004,(234)555-8914,(234)555-0044,jdoe@rosettacode.org:/home/jsmith:/bin/bash']);
  exit;
end;

function appendOneMore(lines: specialize TArray<string>): specialize TArray<string>;
begin
  result := specialize _appendList<Variant>(lines, 'xyz:x:1003:1000:X Yz,Room 1003,(234)555-8913,(234)555-0033,xyz@rosettacode.org:/home/xyz:/bin/bash');
  exit;
end;

procedure main();
var
  lines: Variant;
begin
  lines := writeTwo();
  lines := appendOneMore(lines);
  if ((Length(lines) >= 3) and (lines[2] = 'xyz:x:1003:1000:X Yz,Room 1003,(234)555-8913,(234)555-0033,xyz@rosettacode.org:/home/xyz:/bin/bash')) then
  begin
    writeln('append okay');
  end else
  begin
    writeln('it didn''t work');
  end;
end;

begin
  main();
end.
